--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>IECSE-date-reveal</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div id="reveal">
-        <img src="images/300675340_445303594283259_4895345081047449991_n.jpg" id="revealImage">
-        <div id="cover"></div>
-        <div id="icon"><img src="images/17796076.png" alt=""></div>
+    <div class="container">
+        <div class="cover"></div>
+        <div class="icon"><img src="images/icon.png" alt=""></div>
     </div>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
