--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="cover"></div>
-        <div class="icon"><img src="images/icon.png" alt=""></div>
+        <div class="icon"><img src="images/icon.jpg" alt=""></div>
     </div>
     <script src="js/app.js"></script>
 </body>
