--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="container">
+        <div class="cursor"></div>
         <div class="cover"></div>
         <div class="icon"><img src="images/icon.jpg" alt=""></div>
     </div>
