Improve animations after icon is found.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="cursor"></div>
         <div class="cover"></div>
-        <div class="icon"><img src="images/icon.jpg" alt=""></div>
+        <div class="icon"><img src="images/icon.jpg" alt="IECSE-icon"></div>
     </div>
     <script src="js/app.js"></script>
 </body>
