--- a/index.html
+++ b/index.html
@@ -6,10 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IECSE-date-reveal</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;600;700&family=Poppins:wght@200;300;400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
+        <div class="infocard">
+            <h1>Find your date???</h1>
+
+            <p id="one">Drag your mouse (or finger) around to find you date.</p>
+
+            <div class="colourinfodiv" id="two">
+                <div class="colour" id="yellow"></div>
+                <div> means hot</div>
+            </div>
+
+            <div class="colourinfodiv" id="three">
+                <div class="colour" id="purple"></div>
+                <div> means cold</div>
+            </div>
+
+            <p id="four">(HINT : You can also use the music as a clue.)</p>
+
+            <button class="start">Start Game</button>
+
+        </div>
         <div class="cursor"></div>
         <div class="cover"></div>
         <div class="icon"><img src="images/icon.jpg" alt="IECSE-icon"></div>
