Revert "Implement touch response"

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="cursor"></div>
         <div class="cover"></div>
-        <div class="icon"><img src="images/icon.png" alt="IECSE-icon"></div>
+        <div class="icon"><img src="images/icon.jpg" alt="IECSE-icon"></div>
     </div>
     <script src="js/app.js"></script>
 </body>
